...
    Welcome back!
  </Text>
</View>


                    <TextInput
                        testID="login-email-input"
                        style={globalStyles.input}
                        placeholder="Email"
                        placeholderTextColor={colors.placeholder}
                        value={email}
                        onChangeText={setEmail}
                        returnKeyType="next"
                        autoCapitalize="none"
                        keyboardType="email-address"
                    />

                    <TextInput
                        testID="login-password-input"
                        style={globalStyles.input}
                        placeholder="Password"
                        placeholderTextColor={colors.placeholder}
                        secureTextEntry
                        autoCapitalize="none"
                        value={password}
...
